[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/theme/art/player/bullet/bullet.png" type="Texture" id=1]
[ext_resource path="res://assets/audio/sfx/explode.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/sfx/hit.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/theme/art/enemy/enemy.png" type="Texture" id=4]
[ext_resource path="res://src/Actors/Enemy.gd" type="Script" id=5]
[ext_resource path="res://src/UserInterface/HealthDisplay.tscn" type="PackedScene" id=6]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="Animation" id=2]
resource_name = "destroy"
length = 1.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:collision_layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, -4.5 ), Vector2( 2, -16 ), Vector2( 2, 84 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 980.0, 2000.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0.3, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Explosion:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Explode:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 6.75
loop = true
step = 0.25

[sub_resource type="Animation" id=4]
length = 1.25
loop = true
step = 0.25

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.5, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )
width = 256

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 8.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 250, 0 )
initial_velocity = 120.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 1.0
scale_random = 1.0
color_ramp = SubResource( 7 )
hue_variation = 0.05
hue_variation_random = 0.46

[sub_resource type="CircleShape2D" id=9]
resource_local_to_scene = true
radius = 112.641

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 24
script = ExtResource( 5 )
speed = Vector2( 75, 250 )

[node name="PlatformDetector" type="RayCast2D" parent="."]
position = Vector2( 0, 6 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 8

[node name="FloorDetectorLeft" type="RayCast2D" parent="."]
position = Vector2( -15, -4 )
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 24

[node name="FloorDetectorRight" type="RayCast2D" parent="."]
position = Vector2( 15.5, -3 )
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 24

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 4 )
flip_h = true
hframes = 8
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/destroy = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="Explosion" type="Particles2D" parent="."]
self_modulate = Color( 1, 1, 1, 0.12 )
material = SubResource( 5 )
emitting = false
amount = 32
lifetime = 0.5
one_shot = true
speed_scale = 1.2
explosiveness = 0.76
draw_order = 215832976
process_material = SubResource( 8 )
texture = ExtResource( 1 )

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Explode" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="HealthDisplay" parent="." instance=ExtResource( 6 )]

[node name="JumpTimer" type="Timer" parent="."]

[node name="DetectRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius"]
shape = SubResource( 9 )

[node name="FlyTimer" type="Timer" parent="."]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
[connection signal="timeout" from="FlyTimer" to="." method="_on_FlyTimer_timeout"]
